--- a/src/hitfit.app/Views/Profile/Index.cshtml
+++ b/src/hitfit.app/Views/Profile/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<section id="One" class="wrapper style3">
+﻿@{
+    List<string> images = ViewBag.Images;
+}
+
+<section id="One" class="wrapper style3">
     <div class="inner">
         <header class="align-center">
             <p>Профиль аккаунта</p>
@@ -8,5 +12,24 @@
 </section>
 
 <div>
-    <img id="profilePhoto" name ="profilePhoto"/>
+    <form method="post" enctype="multipart/form-data" asp-controller="Profile" asp-action="Index">
+        <div class="form-group">
+            <div class="col-md-10">
+                <p>Upload one or more files using this form:</p>
+                <input type="file" name="images" multiple accept="image/*" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-10">
+                <input type="submit" value="upload" />
+            </div>
+        </div>
+    </form>
 </div>
+
+@foreach (var image in images)
+{
+    <div class="image fit">
+        <img src="data:image/jpeg;base64,@image" alt="" style="object-fit: cover; height: 40vh;" />
+    </div>
+}
