--- a/src/hitfit.app/Views/Program/Index.cshtml
+++ b/src/hitfit.app/Views/Program/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using hitfit.app.Models
+﻿@*@using hitfit.app.Models
 @using System.Collections.Generic
 @using Microsoft.AspNetCore.Identity
 
@@ -11,7 +11,7 @@
     {
         user = await UserManager.FindByNameAsync(User.Identity.Name);
     }
-}
+}*@
 
 <section id="One" class="wrapper style3">
     <div class="inner">
