--- a/src/hitfit.app/Views/Article/Index.cshtml
+++ b/src/hitfit.app/Views/Article/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using hitfit.app.Models
-@using System.Collections.Generic
+@*@using System.Collections.Generic
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<User> SignInManager
@@ -11,7 +11,7 @@
     {
         user = await UserManager.FindByNameAsync(User.Identity.Name);
     }
-}
+}*@
 
 <section id="One" class="wrapper style3">
     <div class="inner">
@@ -33,7 +33,6 @@
     </div>
 }*@
 
-<form>
     <section id="one" class="wrapper style2">
         <div class="inner">
             <div class="grid-style">
@@ -43,7 +42,7 @@
                         <div class="box">
                             <div class="image fit">
                                 <a asp-route-id="@article.DocumentId" asp-controller="Article" asp-action="ViewArticle">
-                                    <img src="@article.ImageBase64" alt="" style="object-fit: cover; height: 40vh;" />
+                                    <img src="@article.HeaderImage" alt="" style="object-fit: cover; height: 40vh;" />
                                 </a>
                             </div>
                             <div class="content">
@@ -68,4 +67,3 @@
             </div>
         </div>
     </section>
-</form>
