--- a/src/hitfit.app.v2/Views/Home/About.cshtml
+++ b/src/hitfit.app.v2/Views/Home/About.cshtml
@@ -73,7 +73,7 @@
             <img src="../img/img_4_square.jpg" alt="" class="img-fluid">
         </a>
     </div>
-</section> <!-- .section -->
+</section> 
 
 
 
